; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_table_type_from_param_type.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_table_type_from_param_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PRES_VT_FLOAT = common dso_local global i32 0, align 4
@PRES_VT_INT = common dso_local global i32 0, align 4
@PRES_VT_BOOL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Unsupported type %u.\0A\00", align 1
@PRES_VT_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @table_type_from_param_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @table_type_from_param_type(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %11 [
    i32 129, label %5
    i32 128, label %7
    i32 130, label %9
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @PRES_VT_FLOAT, align 4
  store i32 %6, i32* %2, align 4
  br label %15

7:                                                ; preds = %1
  %8 = load i32, i32* @PRES_VT_INT, align 4
  store i32 %8, i32* %2, align 4
  br label %15

9:                                                ; preds = %1
  %10 = load i32, i32* @PRES_VT_BOOL, align 4
  store i32 %10, i32* %2, align 4
  br label %15

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @FIXME(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load i32, i32* @PRES_VT_COUNT, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %11, %9, %7, %5
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
